<resources>
    <string name="app_name">gamesApplication</string>
    <string name="games1">Games</string>
    <string name="sign_up">sing_up</string>
    <string name="log_in">log_in</string>
    <string name="your_name">your Name</string>
    <string name="save_account_setting">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="game_price">Game Price</string>
    <string name="game_description">Game Description</string>
    <string name="game_name">Game Name</string>
    <string name="todo">TODO</string>
</resources>