<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Activity.SingUp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi_Create"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="363dp"
            android:visibility="invisible"
            app:indicatorColor="@color/blue"
            app:indicatorName="BallClipRotatePulseIndicator"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:id="@+id/Game_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/game_placeholder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/L_Name_Game"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_below="@id/Game_image"
            android:layout_centerHorizontal="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_Name_Game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/game_name"
                android:inputType="text"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/L_Game_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/L_Name_Game"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_Game_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/game_price"
                android:inputType="numberDecimal"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/L_Game_Description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/L_Game_price"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_Game_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/game_description"
                android:inputType="textMultiLine"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FAB_SAVE_GAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/L_Game_Description"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/ic_baseline_done"
            app:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/todo" />
    </RelativeLayout>
</ScrollView>