<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Activity.SingUp"
    android:background="@drawable/waves"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@drawable/user_placeholder"
                app:civ_border_width="3dp"
                app:civ_border_color="#000"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/L_FullName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_image"
                android:layout_margin="5dp"
                android:layout_toEndOf="@id/profile_image"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:background="@drawable/cyrcile_wight"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/L_Phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/L_FullName"
                android:layout_toRightOf="@id/profile_image"
                android:layout_margin="5dp"
                android:layout_toEndOf="@id/profile_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:background="@drawable/cyrcile_wight"/>
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/L_Email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/full"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:background="@drawable/cyrcile_wight"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/L_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/L_Email"
            android:layout_centerHorizontal="true"
            app:passwordToggleEnabled="true"
            android:layout_margin="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/cyrcile_wight"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FAB_SAVE_ACCOUNT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/L_Password"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/ic_baseline_done"
            app:backgroundTint="@color/colorPrimary"
            android:contentDescription="TODO" />
</RelativeLayout>
</ScrollView>